# MetaGrowthAgent

./: .gitignore  .vercelignore  AI_WORKFLOW_GUIDE.md  ARCHITECTURE_EXPLANATION.md  DEEPGRAM_INTEGRATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  INTEGRATION_SUMMARY.md  Makefile  QUICK_DEPLOY.md  RAILWAY_BUILD_FIX.md  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICK_START.md  RAPIDAPI_SETUP.md  README.md  RENDER_DEPLOYMENT.md  SQLMODEL_FIX.md  TESTING.md  VERCEL_DEPLOYMENT.md  VERCEL_FIX.md  VERCEL_STEPS.md  pyproject.toml  railway.json  requirements.txt
app/: config.py  db.py  dependencies.py  logging_config.py  main.py
app/models/: __init__.py  report.py
app/routers/: __init__.py  alerts.py  auth.py  reports.py  traffic.py  voice.py  workflow.py
app/schemas/: __init__.py  alerts.py  reports.py  voice.py  workflow.py
app/services/: __init__.py  ai_providers.py  alert_service.py  cache_service.py  competitor_client.py  deepgram_service.py  insight_service.py  meta_client.py  report_service.py  traffic_service.py  workflow_service.py
app/tasks/: refresh.py  schedules.py  worker.py
docs/: architecture.md
frontend/: .vercelignore  App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts  vercel.json  vite.config.ts
frontend/components/: AuthModal.tsx  Background.tsx  CompetitorSelect.tsx  Dashboard.tsx  Hero.tsx  LoadingSequence.tsx  Logo.tsx  MetaConnect.tsx  VoiceAgent.tsx
frontend/services/: api.ts  (+3 more)
infrastructure/: Dockerfile  docker-compose.yml
scripts/: manual_refresh.py
tests/: test_health.py
